// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Histogram Transform Generator aggregates using the denominator equation 1`] = `
Object {
  "bucket_script": Object {
    "buckets_path": Object {
      "value": "_total>total",
    },
    "script": "params.value",
  },
}
`;

exports[`Histogram Transform Generator aggregates using the denominator equation with filter 1`] = `
Object {
  "bucket_script": Object {
    "buckets_path": Object {
      "value": "_total>total",
    },
    "script": "params.value",
  },
}
`;

exports[`Histogram Transform Generator aggregates using the numerator equation 1`] = `
Object {
  "bucket_script": Object {
    "buckets_path": Object {
      "value": "_good>total['target']>_count",
    },
    "script": "params.value",
  },
}
`;

exports[`Histogram Transform Generator aggregates using the numerator equation with filter 1`] = `
Object {
  "bucket_script": Object {
    "buckets_path": Object {
      "value": "_good>total['target']>_count",
    },
    "script": "params.value",
  },
}
`;

exports[`Histogram Transform Generator filters the source using the kql query 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "range": Object {
          "log_timestamp": Object {
            "gte": "now-7d/d",
          },
        },
      },
      Object {
        "bool": Object {
          "minimum_should_match": 1,
          "should": Array [
            Object {
              "match": Object {
                "labels.groupId": "group-4",
              },
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`Histogram Transform Generator returns the expected transform params for timeslices slo 1`] = `
Object {
  "_meta": Object {
    "managed": true,
    "managed_by": "observability",
    "version": 3.3,
  },
  "defer_validation": true,
  "description": "Rolled-up SLI data for SLO: irrelevant [id: irrelevant, revision: 1]",
  "dest": Object {
    "index": ".slo-observability.sli-v3.3",
    "pipeline": ".slo-observability.sli.pipeline-v3.3",
  },
  "frequency": "1m",
  "pivot": Object {
    "aggregations": Object {
      "_good": Object {
        "aggs": Object {
          "total": Object {
            "range": Object {
              "field": "latency",
              "keyed": true,
              "ranges": Array [
                Object {
                  "from": 0,
                  "key": "target",
                  "to": 100,
                },
              ],
            },
          },
        },
        "filter": Object {
          "match_all": Object {},
        },
      },
      "_total": Object {
        "aggs": Object {
          "total": Object {
            "value_count": Object {
              "field": "latency",
            },
          },
        },
        "filter": Object {
          "match_all": Object {},
        },
      },
      "slo.denominator": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "value": "_total>total",
          },
          "script": "params.value",
        },
      },
      "slo.isGoodSlice": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "goodEvents": "slo.numerator>value",
            "totalEvents": "slo.denominator>value",
          },
          "script": "params.goodEvents / params.totalEvents >= 0.95 ? 1 : 0",
        },
      },
      "slo.numerator": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "value": "_good>total['target']>_count",
          },
          "script": "params.value",
        },
      },
    },
    "group_by": Object {
      "@timestamp": Object {
        "date_histogram": Object {
          "field": "log_timestamp",
          "fixed_interval": "2m",
        },
      },
      "slo.id": Object {
        "terms": Object {
          "field": "slo.id",
        },
      },
      "slo.revision": Object {
        "terms": Object {
          "field": "slo.revision",
        },
      },
    },
  },
  "settings": Object {
    "deduce_mappings": false,
    "unattended": true,
  },
  "source": Object {
    "index": Array [
      "my-index*",
      "my-other-index*",
    ],
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "log_timestamp": Object {
                "gte": "now-7d/d",
              },
            },
          },
          Object {
            "bool": Object {
              "minimum_should_match": 1,
              "should": Array [
                Object {
                  "match": Object {
                    "labels.groupId": "group-3",
                  },
                },
              ],
            },
          },
        ],
      },
    },
    "runtime_mappings": Object {
      "slo.id": Object {
        "script": Object {
          "source": "emit('irrelevant')",
        },
        "type": "keyword",
      },
      "slo.revision": Object {
        "script": Object {
          "source": "emit(1)",
        },
        "type": "long",
      },
    },
  },
  "sync": Object {
    "time": Object {
      "delay": "1m",
      "field": "log_timestamp",
    },
  },
  "transform_id": "slo-irrelevant-1",
}
`;

exports[`Histogram Transform Generator returns the expected transform params for timeslices slo using timesliceTarget = 0 1`] = `
Object {
  "_meta": Object {
    "managed": true,
    "managed_by": "observability",
    "version": 3.3,
  },
  "defer_validation": true,
  "description": "Rolled-up SLI data for SLO: irrelevant [id: irrelevant, revision: 1]",
  "dest": Object {
    "index": ".slo-observability.sli-v3.3",
    "pipeline": ".slo-observability.sli.pipeline-v3.3",
  },
  "frequency": "1m",
  "pivot": Object {
    "aggregations": Object {
      "_good": Object {
        "aggs": Object {
          "total": Object {
            "range": Object {
              "field": "latency",
              "keyed": true,
              "ranges": Array [
                Object {
                  "from": 0,
                  "key": "target",
                  "to": 100,
                },
              ],
            },
          },
        },
        "filter": Object {
          "match_all": Object {},
        },
      },
      "_total": Object {
        "aggs": Object {
          "total": Object {
            "value_count": Object {
              "field": "latency",
            },
          },
        },
        "filter": Object {
          "match_all": Object {},
        },
      },
      "slo.denominator": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "value": "_total>total",
          },
          "script": "params.value",
        },
      },
      "slo.isGoodSlice": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "goodEvents": "slo.numerator>value",
            "totalEvents": "slo.denominator>value",
          },
          "script": "params.goodEvents / params.totalEvents > 0 ? 1 : 0",
        },
      },
      "slo.numerator": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "value": "_good>total['target']>_count",
          },
          "script": "params.value",
        },
      },
    },
    "group_by": Object {
      "@timestamp": Object {
        "date_histogram": Object {
          "field": "log_timestamp",
          "fixed_interval": "2m",
        },
      },
      "slo.id": Object {
        "terms": Object {
          "field": "slo.id",
        },
      },
      "slo.revision": Object {
        "terms": Object {
          "field": "slo.revision",
        },
      },
    },
  },
  "settings": Object {
    "deduce_mappings": false,
    "unattended": true,
  },
  "source": Object {
    "index": Array [
      "my-index*",
      "my-other-index*",
    ],
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "log_timestamp": Object {
                "gte": "now-7d/d",
              },
            },
          },
          Object {
            "bool": Object {
              "minimum_should_match": 1,
              "should": Array [
                Object {
                  "match": Object {
                    "labels.groupId": "group-3",
                  },
                },
              ],
            },
          },
        ],
      },
    },
    "runtime_mappings": Object {
      "slo.id": Object {
        "script": Object {
          "source": "emit('irrelevant')",
        },
        "type": "keyword",
      },
      "slo.revision": Object {
        "script": Object {
          "source": "emit(1)",
        },
        "type": "long",
      },
    },
  },
  "sync": Object {
    "time": Object {
      "delay": "1m",
      "field": "log_timestamp",
    },
  },
  "transform_id": "slo-irrelevant-1",
}
`;

exports[`Histogram Transform Generator returns the expected transform params with every specified indicator params 1`] = `
Object {
  "_meta": Object {
    "managed": true,
    "managed_by": "observability",
    "version": 3.3,
  },
  "defer_validation": true,
  "description": "Rolled-up SLI data for SLO: irrelevant [id: irrelevant, revision: 1]",
  "dest": Object {
    "index": ".slo-observability.sli-v3.3",
    "pipeline": ".slo-observability.sli.pipeline-v3.3",
  },
  "frequency": "1m",
  "pivot": Object {
    "aggregations": Object {
      "_good": Object {
        "aggs": Object {
          "total": Object {
            "range": Object {
              "field": "latency",
              "keyed": true,
              "ranges": Array [
                Object {
                  "from": 0,
                  "key": "target",
                  "to": 100,
                },
              ],
            },
          },
        },
        "filter": Object {
          "match_all": Object {},
        },
      },
      "_total": Object {
        "aggs": Object {
          "total": Object {
            "value_count": Object {
              "field": "latency",
            },
          },
        },
        "filter": Object {
          "match_all": Object {},
        },
      },
      "slo.denominator": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "value": "_total>total",
          },
          "script": "params.value",
        },
      },
      "slo.numerator": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "value": "_good>total['target']>_count",
          },
          "script": "params.value",
        },
      },
    },
    "group_by": Object {
      "@timestamp": Object {
        "date_histogram": Object {
          "field": "log_timestamp",
          "fixed_interval": "1m",
        },
      },
      "slo.id": Object {
        "terms": Object {
          "field": "slo.id",
        },
      },
      "slo.revision": Object {
        "terms": Object {
          "field": "slo.revision",
        },
      },
    },
  },
  "settings": Object {
    "deduce_mappings": false,
    "unattended": true,
  },
  "source": Object {
    "index": Array [
      "my-index*",
      "my-other-index*",
    ],
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "log_timestamp": Object {
                "gte": "now-7d/d",
              },
            },
          },
          Object {
            "bool": Object {
              "minimum_should_match": 1,
              "should": Array [
                Object {
                  "match": Object {
                    "labels.groupId": "group-3",
                  },
                },
              ],
            },
          },
        ],
      },
    },
    "runtime_mappings": Object {
      "slo.id": Object {
        "script": Object {
          "source": "emit('irrelevant')",
        },
        "type": "keyword",
      },
      "slo.revision": Object {
        "script": Object {
          "source": "emit(1)",
        },
        "type": "long",
      },
    },
  },
  "sync": Object {
    "time": Object {
      "delay": "1m",
      "field": "log_timestamp",
    },
  },
  "transform_id": "slo-irrelevant-1",
}
`;
